ags (2.0.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ags-feed recall in factory
	* fixed missing property AgsAnalyseChannel:buffer-cleared
	* fixed ags_copy_channel_new() to use correct property AgsRecallChannel:source
	* added ags_recall_recycling_test.c
	* added ags_envelope_audio_signal_test.c
	* added ags_eq10_audio_signal_test.c
	* added ags_feed_audio_signal_test.c
	* added ags_mute_audio_signal_test.c
	* added ags_peak_audio_signal_test.c
	* added ags_play_audio_signal_test.c
	* added ags_prepare_audio_signal_test.c
	* added ags_stream_audio_signal_test.c
	* added ags_volume_audio_signal_test.c
	* added ags_analyse_channel_test.c
	* added ags_buffer_channel_test.c
	* added ags_capture_wave_audio_test.c
	* added ags_capture_wave_channel_test.c
	* added ags_copy_channel_test.c

ags (2.0.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed 32/64 bit issues in ags_recycling_context.c
	* fixed ags-copy recall
	* added ags_buffer_audio_signal_test.c
	* added ags_copy_audio_signal_test.c

ags (2.0.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSpectrometer and AgsEqualizer10 missing recall factory effects
	* fixed possible infinite loop in ags_recycling_context.c
	* fixed possible floating point exception in ags_synth_generator.c
	* completed ags_recycling_context_test.c
	* renamed ags_functional_editor_workflow_test.c to ags_functional_notation_editor_workflow_test.c
	* added ags_functional_automation_editor_workflow_test.c
	* added ags_synth_generator_test.c
	* added ags_analyse_audio_signal_test.c

ags (2.0.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing properties AgsAudio:min-audio-channels, AgsAudio:min-output-pads and AgsAudio:min-input-pads
	* fixed ags_recycling_context_remove() potential memory corruption
	* populated ags_audio_buffer_util_test.c
	* added ags_char_buffer_util_test.c skelleton
	* added ags_devin_test.c