@@ -4,6 +4,7 @@ ags (2.0.34)
 	* fixed missing ags-feed recall in factory
 	* fixed missing property AgsAnalyseChannel:buffer-cleared
 	* fixed ags_copy_channel_new() to use correct property AgsRecallChannel:source
+	* fixed ags_copy_pattern_audio_new() to use correct type to set bank-index-0 and bank-index-1
 	* added ags_recall_recycling_test.c
 	* added ags_envelope_audio_signal_test.c
 	* added ags_eq10_audio_signal_test.c
@@ -19,6 +20,8 @@ ags (2.0.34)
 	* added ags_capture_wave_audio_test.c
 	* added ags_capture_wave_channel_test.c
 	* added ags_copy_channel_test.c
+	* added ags_copy_pattern_audio_test.c
+	* added ags_copy_pattern_channel_test.c
 
 ags (2.0.33)
 
